fix select width on mobile

--- a/components/sub-select.module.css
+++ b/components/sub-select.module.css
@@ -1,5 +1,5 @@
 .subSelect {
-  width: 100px !important;
+  max-width: 120px !important;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis !important;
